--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,89 @@
+/* GLOBAL STYLES
+-------------------------------------------------- */
+/* Padding below the footer and lighter body text */
+
+body {
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+  color: #5a5a5a;
+}
+
+
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel {
+  margin-bottom: 4rem;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  bottom: 3rem;
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+  height: 32rem;
+}
+.carousel-item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 32rem;
+}
+
+
+/* MARKETING CONTENT
+-------------------------------------------------- */
+
+.marketing-icon{
+  font-size: 6rem; 
+  color: 
+  rgb(129, 4, 79);
+}
+
+/* Center align the text within the three columns below the carousel */
+.marketing .col-lg-4 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+.marketing h2 {
+  font-weight: 2.5rem;
+  color: #e74c3c;
+  font-family: 'Arvo', courier, serif;
+  text-transform: uppercase;
+}
+/* rtl:begin:ignore */
+.marketing .col-lg-4 p {
+  margin-right: .75rem;
+  margin-left: .75rem;
+}
+/* rtl:end:ignore */
+
+.marketing-head{
+  font-size: 1.1rem;
+}
+
+
+/* Featurettes
+------------------------- */
+
+.featurette-divider {
+  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+}
+
+/* Thin out the marketing headings */
+.featurette-heading {
+  font-weight: 300;
+  line-height: 1;
+  /* rtl:remove */
+  letter-spacing: -.05rem;
+}
+
+   
+
 /* Modify Boostrap defaults */
 
 .navbar-dark .navbar-brand{
@@ -12,6 +98,11 @@
   color: #d8d8d8; 
   font-size: 1rem;
  
+}
+
+.py-4 {
+  padding-top: 1.9rem !important;
+  padding-bottom: 1.5rem !important;
 }
 
 .panel-body > ul >li{
@@ -30,9 +121,50 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
   background-color: #eee;
 }
 
+/* Conselho */
+
+.council .col {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+.council h2 {
+  font-weight: 3rem;
+  color: #e74c3c;
+  font-family: 'Arvo', courier, serif;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  text-align: center;
+  margin-bottom: 5rem;
+}
+.council img{
+  max-width: 60%;
+}
+.council-name{
+  font-size: 1.1rem;
+  font-family: 'Roboto',courier,serif;
+  font-weight: 700;
+  line-height: 1.2;
+  text-transform: uppercase;
+
+}
+.council-function{
+  font-weight: 1rem;
+  font-family: 'Arvo', courier, serif;
+  text-transform: uppercase;
+  /*letter-spacing: 0.2rem; */
+  text-align: center;
+  margin-top: 0.5rem;
+  margin-bottom: 5rem;
+}
+
+
 /* Footer */
 .footer{
 	background-color: #EAEAEA;
+  padding-top: 2rem;
+  font-weight: 2rem !important;
+  font-family: 'Arvo', courier, serif;
+  margin-bottom: 3rem;
 }
 .footer a{
   color: #555;
@@ -42,6 +174,8 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 .text-muted{
 	font-family: 'Lato', sans-serif;
   color: #555;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
 }
 
 /* My classess */
@@ -202,7 +336,34 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
   line-height: 1.5;
 }
 
-/* Medias */
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 40em) {
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4;
+  }
+
+  .carousel-item img{
+
+  }
+
+  .featurette-heading {
+    font-size: 50px;
+  }
+
+}
+
+@media (min-width: 62em) {
+  .featurette-heading {
+    margin-top: 7rem;
+  }
+}
+
 @media (min-width: 979px) {
   ul.nav li.dropdown:hover > ul.dropdown-menu {
     display: block;
